fix alignment of request resuults button

--- a/src/scss/pages/alpha.module.scss
+++ b/src/scss/pages/alpha.module.scss
@@ -98,8 +98,9 @@ p.title {
   overflow: visible !important;
 }
 .request-container {
-  width: 98vw;
+  max-width: 1820px;
   padding: 4vw 2vw;
+  margin: 0 auto;
 }
 
 .search-container {
